# aguhot

./: .env.example  .gitignore  .npmrc  .prettierignore  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.bmad-loop/: policy.toml
.codex/: hooks.json
_bmad/: config.toml  config.yaml
_bmad-output/: demo-c.html  demo-ui-redesign.html  demo-variants.html
_bmad-output/implementation-artifacts/: .review-diff-2-1.patch  .review-diff-2-3.patch  .review-diff-2-4.patch  .review-diff-2-5.patch  .review-diff-3-1.patch  .review-diff-3-2.patch  .review-diff-3-3.patch  .review-diff-3-4.patch  .review-diff-3-5.patch  .review-diff-3-6.patch  .review-diff-4-2.patch  .review-diff-4-3.patch  .review-diff-4-4.patch  .review-diff-5-1.patch  .review-diff-5-2.patch  .review-diff-5-3.patch  .review-diff-5-4.patch  bmad-dev-auto-result-2-2-concept-industry-and-stock-associations.md  bmad-dev-auto-result-2-3-theme-page-continuity-tracking.md  bmad-dev-auto-result-2-4-daily-digest-generation-and-reading.md  bmad-dev-auto-result-4-3-session-and-category-filters.md  deferred-work.md  epic-1-context.md  epic-2-context.md  epic-3-context.md  epic-4-context.md  epic-5-context.md  epic-6-context.md  epic-6-retro-2026-07-12.md  epic-8-context.md  (+48 more)
apps/market-sidecar/: .gitignore  README.md  pyproject.toml
apps/market-sidecar/src/market_sidecar/: __init__.py  __main__.py  akshare_client.py  config.py  db.py  ingest.py
apps/market-sidecar/src/market_sidecar/fixtures/: __init__.py
apps/market-sidecar/tests/: test_parse.py  test_upsert.py
(+189 files in other folders)
